# torch-cephes

./: .travis.yml  CMakeLists.txt  README.md  bessel.lua  cephes-0-0.rockspec  cmath.lua  convert.py  error_handling.lua  index.html  init.lua  ldoubdoc.html  misc.lua
cdflib/: CMakeLists.txt  cdf_wrappers.c  cdf_wrappers.h  sf_error.c  sf_error.h
cephes/: 128bit.tgz  CMakeLists.txt  bessel.tgz  c9x-complex.tgz  cmath.tgz  cprob.tgz  doubldoc.html  ellf.tgz  eval.tgz  ieee.tgz  ldouble.tgz  linalg.tgz  misc.tgz  ode.tgz  qfloat.tgz  remes.tgz  robots.txt  single.tgz  torch_mtherr.c
cephes/bessel/: airy.c  hyp2f1.c  hyperg.c  i0.c  i1.c  iv.c  j0.c  j1.c  jn.c  jv.c  k0.c  k1.c  kn.c  mconf.h  psi.c  struve.c  yn.c
cephes/cmath/: acosh.c  asin.c  asinh.c  atan.c  atanh.c  cbrt.c  chbevl.c  clog.c  cmplx.c  const.c  cosh.c  drand.c  dtestvec.c  exp.c  exp10.c  exp2.c  fabs.c  floor.c  isnan.c  log.c  log10.c  log2.c  mod2pi.c  mtst.c  polevl.c  pow.c  powi.c  protos.h  round.c  setprec.c  sin.c  sincos.c  sindg.c  sinh.c  sqrt.c  tan.c  tandg.c  tanh.c  unity.c
cephes/cprob/: bdtr.c  btdtr.c  chdtr.c  expx2.c  fdtr.c  gamma.c  gdtr.c  igam.c  igami.c  incbet.c  incbi.c  kolmogorov.c  nbdtr.c  ndtr.c  ndtri.c  pdtr.c  stdtr.c
cephes/ellf/: ellf.c  ellie.c  ellik.c  ellpe.c  ellpj.c  ellpk.c  mconf.h  protos.h
cephes/luasrc/: error_handling.lua  misc.lua
cephes/misc/: beta.c  dawsn.c  ei.c  expn.c  fac.c  fresnl.c  planck.c  polylog.c  rgamma.c  shichi.c  sici.c  simpsn.c  (+3 more)
doc/: 128bdoc.html  CMakeLists.txt  singldoc.html  torchonly.html  torchonly.markdown
doc/html/: cdflib.html  index.cephes.html  index.html  test  test.markdown
doc/markdown/: doubldoc.md  index.md
doc/old/doc/: qlibdoc.html
doc/src/: MdWriter.lua  README.DOC.markdown  _config.yml  cdflib.html  doubldoc.html  index.markdown  to_markdown.lua  torchonly.markdown
doc/src/_layouts/: doc.html
hooks/: post-commit  pre-commit
luasrc/: CMakeLists.txt  error_handling.lua  init.lua  limits.lua  misc.lua
makewrap/: createFFI.py  createTests.py  extractFunctions.py  list_of_functions.txt  runAll.sh
stylesheets/: styles.css
tests/: CMakeLists.txt  testCprob.lua  testErrorHandling.lua  test_bessel.lua  test_cmath.lua  test_cprob.lua  test_ellf.lua  test_limits.lua  test_misc.lua  test_polyn.lua  test_vectorized.lua
(+22 files in other folders)
